<resources>
    <string name="app_name">GoSkate</string>
    <string name="user_name">NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_pasword">PASSWORD</string>
    <string name="user_comfirm_pasword">COMFIRMAR PASSWORD</string>
    <string name="user_age">EDAD</string>
    <string name="new_acount">¿AUN NO TIENES UNA CUENTA?</string>
    <string name="Inicio">Home</string>
    <string name="Map">Map</string>
    <string name="new_spot">New</string>
    <string name="shop">Shop</string>
    <string name="new_spot_map">New Spot</string>
    <string name="title_activity_maps_go_skate">Map</string>
    <string name="spot_type">Tipo de Spot</string>
    <string name="truco_post">TRUCO</string>
    <string name="rider_post">RIDER</string>
    <string name="exit_app">Exit</string>
</resources>
