<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_home_btn"
            android:title="@string/Inicio"
            android:icon="@drawable/ic_action_home"/>

    <item
            android:id="@+id/nav_map_btn"
            android:title="@string/Map"
            android:icon="@drawable/ic_action_map"/>

    <item
            android:id="@+id/cam_btn"
            android:title="@string/new_spot"
            android:icon="@drawable/ic_action_cam"/>

    <item
            android:id="@+id/shop_btn"
            android:title="@string/shop"
            android:icon="@drawable/ic_action_shop"/>

    <item
            android:id="@+id/new_spot_btn"
            android:title="@string/new_spot_map"
            android:icon="@drawable/ic_action_new"/>

</menu>