<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/Inicio"
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_action_home"/>

    <item
            android:title="@string/Map"
            android:id="@+id/item_mapa"
            android:icon="@drawable/ic_action_map"/>

    <item
            android:title="@string/new_spot"
            android:id="@+id/item_cam"
            android:icon="@drawable/ic_action_newpost"/>


    <item
            android:title="@string/shop"
            android:id="@+id/item_shop"
            android:icon="@drawable/ic_action_shop"/>

    <item
            android:title="@string/new_spot_map"
            android:id="@+id/item_newspot"
            android:icon="@drawable/ic_action_new"/>


</menu>