<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoo"
        tools:context=".View.newUserActivity">


    <android.support.v7.widget.CardView
            android:layout_width="310dp"
            android:layout_height="501dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.482"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/colorCard"
            app:cardCornerRadius="55dp" android:id="@+id/cardView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
                android:layout_width="310dp"
                android:layout_height="500dp">


            <ImageView
                    android:layout_width="114dp"
                    android:layout_height="110dp" app:srcCompat="@drawable/logooooo"
                    android:id="@+id/imageView3" android:layout_marginTop="28dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:background="@drawable/edit_auth"
                    android:id="@+id/nameUser" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="59dp" android:layout_marginRight="59dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp" app:layout_constraintHorizontal_bias="0.517"
                    android:hint="@string/user_name" android:textColorHint="@color/cardview_dark_background"
                    android:textSize="18sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@drawable/edit_auth"
                    android:id="@+id/login_email" android:layout_marginTop="19dp"
                    app:layout_constraintTop_toBottomOf="@+id/nameUser" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="60dp" android:layout_marginRight="60dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="59dp"
                    android:layout_marginStart="59dp" android:hint="@string/user_email"
                    android:textColorHint="@color/cardview_dark_background"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@drawable/edit_auth"
                    android:id="@+id/passwor_login" android:layout_marginTop="19dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_email" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="60dp" android:layout_marginRight="60dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="59dp"
                    android:layout_marginStart="59dp" android:hint="@string/user_pasword"
                    android:textColorHint="@color/cardview_dark_background"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@drawable/edit_auth"
                    android:id="@+id/comfirPass" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="60dp" android:layout_marginRight="60dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="59dp"
                    android:layout_marginStart="59dp" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/passwor_login" app:layout_constraintHorizontal_bias="0.545"
                    android:hint="@string/user_comfirm_pasword"
                    android:textColorHint="@color/cardview_dark_background"/>
            <RadioGroup
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:orientation="horizontal"
                    android:layout_marginEnd="66dp" android:layout_marginRight="66dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="59dp" android:layout_marginStart="59dp" android:layout_marginTop="19dp"
                    app:layout_constraintTop_toBottomOf="@+id/comfirPass" android:id="@+id/radioGroup"
            >
                <RadioButton
                        android:text="Mujer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/mujerSex" android:layout_weight="1"/>
                <RadioButton
                        android:text="Hombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/hombreSex" android:layout_weight="1"/>
            </RadioGroup>
            <Button
                    android:layout_width="167dp"
                    android:layout_height="61dp"
                    android:id="@+id/login_button"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="120dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="122dp"
                    android:layout_marginRight="122dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="123dp" android:layout_marginStart="123dp"
                    android:background="@drawable/registrobuton" app:layout_constraintHorizontal_bias="0.505"
                    android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/edadlogin"
                    app:layout_constraintVertical_bias="0.186"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:background="@drawable/edit_auth"
                    android:id="@+id/edadlogin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintHorizontal_bias="0.486"
                    android:hint="@string/user_age" android:textColorHint="@color/cardview_dark_background"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>