<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.galeryActivity" android:background="@color/colorPrimary" android:id="@+id/constrain">

    <ImageView
            android:layout_width="139dp"
            android:layout_height="118dp" app:srcCompat="@drawable/logooooo"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
            android:layout_width="358dp"
            android:layout_height="229dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:id="@+id/cardView2" app:layout_constraintHorizontal_bias="0.703"
            app:cardCornerRadius="25dp" app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/cardView3"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/post_spot">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="157dp"
                    android:layout_height="196dp"
                    android:id="@+id/video_post"
                    android:background="@drawable/ic_action_video"
                    tools:ignore="NotSibling"
                    android:layout_marginTop="14dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintVertical_bias="0.0"/>
            <Button
                    android:layout_width="138dp"
                    android:layout_height="161dp"
                    android:id="@+id/button4"
                    android:background="@drawable/ic_action_cam" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="19dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="14dp" app:layout_constraintEnd_toStartOf="@+id/video_post"
                    android:layout_marginEnd="14dp" android:layout_marginRight="14dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/post_spot" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:background="@drawable/edit_auth" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/cardView2"
            android:hint="@string/user_name"
            android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"/>
    <androidx.cardview.widget.CardView
            android:layout_width="319dp"
            android:layout_height="163dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/colorCard" android:id="@+id/cardView3"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/cardView2">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/spot_truco" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="53dp" android:layout_marginStart="53dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="55dp"
                    android:layout_marginRight="55dp" android:background="@drawable/edit_auth"
                    android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/post_rider"
                    android:hint="@string/truco_post"
                    android:textColorHint="@color/common_google_signin_btn_text_light_default"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/spot_truco" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="55dp" android:layout_marginRight="55dp" android:text="Name"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="53dp"
                    android:layout_marginStart="53dp" android:background="@drawable/edit_auth"
                    android:id="@+id/post_rider" android:layout_marginBottom="13dp"
                    app:layout_constraintBottom_toTopOf="@+id/button2" android:hint="@string/rider_post"
                    android:textColorHint="@color/common_google_signin_btn_text_light_pressed"/>
            <Button
                    android:layout_width="171dp"
                    android:layout_height="51dp"
                    android:id="@+id/button2" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/post_rider" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="117dp" android:layout_marginRight="117dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="117dp"
                    android:layout_marginStart="117dp" android:background="@drawable/share_btn"
                    android:layout_marginBottom="31dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            app:menu="@menu/menu_item"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" android:background="@color/colorPrimaryDark"
            android:id="@+id/menu_nav" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>